--- a/app/src/main/res/layout/activity_add_notes.xml
+++ b/app/src/main/res/layout/activity_add_notes.xml
@@ -58,11 +58,13 @@
                 android:textSize="18sp" />
 
             <EditText
+                android:id="@+id/editText_addActivity_notesTitle"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/edit_text_style"
-                android:backgroundTint="#ffffff" />
+                android:backgroundTint="#ffffff"
+                android:textColor="#333333"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -74,11 +76,13 @@
                 android:textSize="18sp" />
 
             <EditText
+                android:id="@+id/editText_addActivity_notesDescription"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/edit_text_style"
-                android:backgroundTint="#ffffff" />
+                android:backgroundTint="#ffffff"
+                android:textColor="#333333"/>
 
             <Button
                 android:id="@+id/btn_add"
