--- a/app/src/main/res/layout/activity_edit_notes.xml
+++ b/app/src/main/res/layout/activity_edit_notes.xml
@@ -61,7 +61,8 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/edit_text_style"
-                android:backgroundTint="#ffffff" />
+                android:backgroundTint="#ffffff"
+                android:textColor="#333333"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -77,7 +78,8 @@
                 android:layout_height="250dp"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/edit_text_style"
-                android:backgroundTint="#ffffff" />
+                android:backgroundTint="#ffffff"
+                android:textColor="#333333"/>
 
             <Button
                 android:id="@+id/btn_edit"
