--- a/app/src/main/res/layout/activity_add_notes.xml
+++ b/app/src/main/res/layout/activity_add_notes.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_white"
     android:orientation="vertical"
-    tools:context=".AddNotesActivity">
+    tools:context=".activity.AddNotesActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
