--- a/app/src/main/res/layout/activity_read_notes.xml
+++ b/app/src/main/res/layout/activity_read_notes.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_blue"
-    tools:context=".ReadNotesActivity">
+    tools:context=".activity.ReadNotesActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
